updated to have multiple questions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,13 @@
     <string name="action_settings">Settings</string>
     <string name="question_text">Constantinople is the largest city in Turkey.</string>
     <string name="true_button">True</string>
+    <string name="next_button">Next</string>
     <string name="false_button">False</string>
     <string name="correct_toast">Correct Answer.</string>
     <string name="wrong_toast">Wrong Answer.</string>
+    <string name="question_oceans">Pacific is bigger than Atlantic.</string>
+    <string name="question_mideast">Suez Canal connects the Red Sea and the Indian Ocean.</string>
+    <string name="question_africa">The source of he Nile River is the Egypt.</string>
+    <string name="question_americas">Amazon River is the longest river in America.</string>
+    <string name="question_asia">Lake Baikal is the world\'s oldest lake.</string>
 </resources>
