added new activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,9 @@
     <string name="question_africa">The source of he Nile River is the Egypt.</string>
     <string name="question_americas">Amazon River is the longest river in America.</string>
     <string name="question_asia">Lake Baikal is the world\'s oldest lake.</string>
+    <string name="cheat_button">Cheat!</string>
+    <string name="warning_text">Are you sure?</string>
+    <string name="show_answer_button">Show Answer</string>
+    <string name="judgement_toast">Cheating is wrong.</string>
+    <string name="title_activity_cheat">CheatActivity</string>
 </resources>
